fix: policies text alignment

--- a/sass/contact.sass
+++ b/sass/contact.sass
@@ -3,13 +3,13 @@
     padding-right: 2.06rem
     padding-bottom: 2.74rem
     &__info
-        margin-bottom: 53px
+        margin-bottom: 3.31rem
         &__title
-            font-size: 40px
+            font-size: 2.5rem
             font-weight: 400
-            margin-bottom: 5px
+            margin-bottom: 0.31rem
         &__subtitle
-            margin-bottom: 38px
+            margin-bottom: 2.375rem
 
         &__contact-method
             &__icon
@@ -23,35 +23,41 @@
             &__label
                 display: inline-block
                 color: #08A6E4
-                margin-bottom: 42px
+                margin-bottom: 2.625rem
             &__input
                 width: 100%
                 border: none
                 border-bottom: 1px solid #95989A
         &__policies
-            margin-bottom: 33px
+            margin-bottom: 2.06rem
+            padding-right: 0.315rem
             &__check
                 width: 24px
                 height: 24px
+                margin-right: 0.625rem
                 color: #95989A
                 border-radius: 4px
                 &:checked
                     background-color: green
                     color: green
             &__text
-                font-size: 12px
+                width: 87%
+                font-size: 0.75rem
+                display: inline-block
+                vertical-align: top
+                color: #707070
         &__button-container
             text-align: right
             &__button
                 padding: 1.25rem 6.06rem
                 border: 0
-                border-radius: 35px
+                border-radius: 2.19rem
                 color: white
                 background-color: #08A6E4
             
 
 .input1
-    margin-bottom: 42px
+    margin-bottom: 2.625rem
 
 .input2
-    margin-bottom: 31px
+    margin-bottom: 1.94rem
