--- a/sass/header.sass
+++ b/sass/header.sass
@@ -19,25 +19,25 @@
             color: white
             background-color: #08A6E4
             border: 0
-            padding: 1.375em 5.75em  
+            padding: 1.375rem 5.75rem  
 
     &__image
         width: 100%
-        margin-bottom: 40px
+        margin-bottom: 2.5rem
 
     &__facts
         padding-left: 2.25rem
         padding-right: 2.25rem
         padding-bottom: 3.125rem
         &__title
-            font-size: 1.875em
+            font-size: 1.875rem
             font-family: Raleway
             font-weight: 300
-            margin-bottom: 1.56em
+            margin-bottom: 1.56rem
         &__item
-            margin-bottom: 1.5em
+            margin-bottom: 1.5rem
             &__svg
-                margin-bottom: 1em
+                margin-bottom: 1rem
                 &__elipse1
                     transform: translate(40%, 10%)
                 &__elipse
