--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,7 @@ html
 
 body
     min-width: 320px
+    font-family: Raleway
 
 :root
     --oxy-red: #EB476E
